--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.9.3",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^9.4.0",
